# Sik

./: pyproject.toml
src/sik/: __init__.py  common.py  ecosia.py  presearch.py
