[project]
name = "sik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael John Angelo Belciña", email = "mjabelcina@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.55.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
